# ballpushing_utils

./: .env.example  .gitattributes  .gitignore  DATAVERSE.md  LICENSE  README.md  compare_datasets.py  find_missing_flies.py  pyproject.toml  rename_major_event.sh  requirements.txt  run_all_figures.py  run_all_pca_plots.py  run_pca_plots_simple.py  static_pca_loadings.csv  static_pca_loadings.csv.bak  static_pca_with_metadata_tailoredctrls.feather  static_sparsepca_loadings.csv.backup  static_sparsepca_loadings.csv.bak  static_sparsepca_scores.csv  test_dynamic_pca_config.py  test_holoviews_export_comprehensive.py  test_plot.html  test_spontaneous_ball_movement.py  update_interactive_scripts.py
.claude/: settings.local.json
.github/workflows/: integration.yml  tests.yml
Datasets/: README.md
apps/: README.md  screen_explorer.py
diagnostics/: README.md  run_event_timeline.py  run_metric_report.py
experiments_yaml/: F1_New.yaml  F1_TNT_DDC.yaml  F1_TNT_Full.yaml  F1_TNT_LC10-2.yaml  F1_TNT_MB247.yaml  OR67d_Gtacr.yaml  TNT_Olfaction_Dark.yaml  antennae_cutting.yaml  ball_types.yaml  ballscents.yaml  broad_TNT_screen.yaml  f1_new_251008_251009.yaml  lc6_server_flies.yaml  learning_mutants.yaml  magnet_block_folders.yaml  magnetblock_240710.yaml  magnetblock_240710_corridors.yaml  magnetblock_TNT_DDC.yaml  test_experiment.yaml  test_experiments.yaml
experiments_yaml/TNT_Genotypes/: EmptySplit.yaml  LC10_2.yaml  MB247.yaml  Test.yaml
figures/EDFigure1-HighRes/: edfigure1_early_contact_classification.ipynb
figures/EDFigure10-FeedingStates/: edfigure10_a_trajectories.py  edfigure10_b_final_position.py  edfigure10_c_metrics_significant.py  edfigure10_d_metrics_nonsignificant.py  run_all_panels.py
figures/EDFigure2-Magnetblock_speeds/: edfigure2_abc_speeds.py
figures/EDFigure3-Wild-type_Light/: edfigure3_a_trajectories.py  edfigure3_b_summary_metrics.py  run_all_panels.py
figures/EDFigure4-Confocal/: edfigure4_confocal_stacks.py  stack_infos.yaml
figures/EDFigure5-UMAP/: edfigure5_umap.py
figures/EDFigure6-Dendrogram/: edfigure6_dendrogram.py
figures/EDFigure7-Balltypes/: edfigure7_b_first_push_time.py  edfigure7_c_trajectories.py  run_all_panels.py
figures/EDFigure8-Ballscents/: edfigure8_abc_metrics.py  edfigure8_def_trajectories.py  run_all_panels.py
figures/EDFigure9-Ir8a_Light/: edfigure9_a_trajectories.py  edfigure9_b_pulling_ratio.py  run_all_panels.py
figures/Fig1-setup/: compute_distribution_stats.py  learning_trials_duration.py  plot_simulation_trajectories.py  plot_wildtype_trajectories.py
figures/Fig2-Affordance/: fig2_f1_control_conditions.py  fig2_f1_heatmaps_pretraining.py  fig2_magnetblock_first_major_push_index.py  fig2_magnetblock_first_major_push_time.py  plot_magnetblock_trajectories.py
figures/Fig3-Screen/: fig3_contact_image.py  fig3_f1_tnt.py  fig3_kinematic_features.py  fig3_screen_heatmap.py  fig3_umap.py
figures/SuppInfo/: File2_umaps.py
figures/SuppInfoFile2-UMAP/: umaps.py
figures/SuppVideo/: Video8_9.py
notebooks/: Experiment_initialisation.ipynb  Interaction_based_metrics.ipynb  Interaction_based_metrics.ipynb.bak  Interaction_based_metrics_datasets.ipynb  Interaction_based_metrics_datasets.ipynb.bak  Interaction_events.ipynb  Magnet_Exps.ipynb  Magnet_Exps.ipynb.bak  PCA_datasets.ipynb  Skeleton_data.ipynb  Skeleton_data.ipynb.bak  TNT_Hits_Exploration.ipynb  TNT_Hits_Exploration.ipynb.bak  UMAP_datasets.ipynb  ballpushing_metrics_reference.ipynb  ballpushing_utils_walkthrough.ipynb  check_pose_data.ipynb  dataset_types_guide.ipynb  diagnostics_demo.ipynb  framewise_datasets.ipynb.bak
notebooks/ball_tracking/: 1_track_balls.py  2_visualize_ball_position.ipynb  3_homography.ipynb  utils.py
plots/Ballpushing_PR/: plot_feedingstate_backingoff_first_push.py  plot_feedingstate_event_metrics_first_push.py  plot_feedingstate_event_umap.py  plot_feedingstate_final_position.py  plot_feedingstate_interaction_rate_first_push.py  plot_feedingstate_trajectories.py  plot_wildtype_push_rate.py  run_lmm_metrics_PR.py  run_permutation_feeding_state.py  run_permutation_light_conditions.py  run_permutation_period_snw.py
plots/F1_tracks/: F1_data_explorer.ipynb  binary_metrics_analysis.py  compute_distance_at_timepoints.py  compute_distance_moved_over_time.py  correlation_summary.py  f1_control_condition_comparison.py  f1_metrics_list.txt  f1_pca_analysis.py  f1_pca_analysis_control.py  f1_tnt_genotype_comparison.py  f1_tnt_training_test_comparison.py  plot_aligned_heatmaps_by_condition.py  plot_aligned_heatmaps_tnt.py  plot_fly_position_heatmaps.py  plot_lasagna_distance.py
plots/Supplementary_exps/: plot_ballscent_trajectories.py  plot_ballscents_metrics_heatmap.py  plot_balltypes_trajectories.py  plot_broad_tnt_trajectories.py  plot_dark_olfaction_coordinates_over_time.py  plot_dissected_metrics_heatmap.py  plot_dissected_trajectories.py  plot_gtacr_or67d_metrics_heatmap.py  plot_gtacr_or67d_trajectories.py  plot_light_trajectories.py  (+16 more)
src/: analyze_tnt_screen_results.py  build_region_standardized_contacts.py  build_region_trajectories.py  build_wildtype_trajectories.py  check_sleap_video_paths_yaml_multiprocess.py  cleanup_duplicate_h5_files.py  combine_yaml_files.py  correlation_analysis.py  dataset_builder.py  fix_sleap_mismatches.py  get_fly_list.py  high_correlation_pairs.csv  load_filtered_dataset_from_yaml.py  metrics_correlation_matrix.csv  metrics_list.csv  plot_dark_olfaction_coordinates_over_time.py  pool_feather_files.py  run_umap.py  split_region_trajectories.py  umap_optimiser.py
tests/: Main_Test.py  conftest.py  dendrogram_tester.py  lal2_vs_emptysplit_analysis.py  profile_dataset_builder.py  profile_dataset_builder_detailed.py  run_f1_examples.py  test_methods.py
tools/: compare_ball_preprocess.py  compare_dataverse_vs_server.py  compare_server_dataverse.py  compress_sample_fly.py  diagnostics_dashboard.py  execute_doc_notebooks.py  smoke_external_user.py
umap/: analysis.ipynb  analysis.py  preprocess.py  utils.py
umap_configs/: umap1.json  umap2.json  umap_TNT_1.json  umap_ctrl.json  umap_test.json
(+458 files in other folders)
