[project]
name = "ballpushing-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorcet>=3.1.0",
    "imageio[ffmpeg]>=2.37.3",
    "ipykernel>=7.2.0",
    "kdepy>=1.1.12",
    "matplotlib>=3.10.3",
    "mplex>=0.0.7",
    "natsort>=8.4.0",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "pandas>=2.2.3",
    "pyarrow>=24.0.0",
    "python-tsp>=0.5.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.7",
    "video-reader-rs>=0.4.2",
]
