[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ballpushing_utils"
version = "0.1.0"
description = "Analysis toolkit and paper companion for 'Object manipulation and affordance learning in Drosophila' (Durrieu et al., 2026)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Matthias Durrieu", email = "matthias.durrieu@epfl.ch" },
    # Co-author: UMAP analysis subpackage + the Fig 3 / ED Fig 4 / ED
    # Fig 5 / Supp Info / Supp Video panels and the ball-tracking
    # notebooks. See the Contributors section in the README for the
    # exact file list.
    { name = "Tommy Lam", email = "thomas.lam@epfl.ch" },
    # Co-author: high-resolution ball-pushing analysis
    # (src/ball_pushing_high_res/) used for ED Fig 1.
    { name = "Dominic Dall'Osto", email = "dominic.dallosto@epfl.ch" },
]
maintainers = [
    { name = "Matthias Durrieu", email = "matthias.durrieu@epfl.ch" },
]
keywords = [
    "drosophila",
    "behavior",
    "neuroscience",
    "object-manipulation",
    "affordance",
    "ball-pushing",
    "tracking",
    "sleap",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]

# Runtime dependencies. Version pins are intentionally loose so the package
# co-exists with recent SciPy/matplotlib/pandas stacks; strict pins used to
# reproduce the paper figures live in `requirements.txt`.
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "scikit-bio>=0.6",
    "statsmodels>=0.14",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "h5py>=3.10",
    "pyarrow>=14",
    "tqdm>=4.65",
    "PyYAML>=6.0",
    "numba>=0.59",
    "psutil>=5.9",
    "opencv-contrib-python>=4.9",
    "icecream>=2.1",
    "umap-learn>=0.5",
    # ``tabulate`` is the backend used by ``pandas.DataFrame.to_markdown``,
    # which the diagnostics report writer inlines for table previews.
    "tabulate>=0.9",
    # ``diptest`` is Hartigan's dip statistic for unimodality, used by
    # figures/Fig1-setup/compute_distribution_stats.py.
    "diptest>=0.9",
    # `utils_behavior` is a lab package used throughout the codebase and
    # published via GitHub rather than PyPI — declare the VCS URL directly
    # so `pip install -e .` works out of the box without a private index.
    "utils_behavior @ git+https://github.com/NeLy-EPFL/utils_behavior.git",
    "colorcet>=3.1.0",
    "imageio[ffmpeg]>=2.37.3",
    "ipykernel>=7.2.0",
    "kdepy>=1.1.12",
    "mplex>=0.0.7",
    "natsort>=8.4.0",
    "opencv-python>=4.11.0.86",
    "python-tsp>=0.2.0",
    "video-reader-rs>=0.4.2",
    "polars>=1.40.1",
    "plotnine>=0.13",
    "flyplotlib>=0.5.2",
    "antspyx>=0.6.3",
    "tifffile>=2025.5.10",
]

[project.optional-dependencies]
interactive = [
    # bokeh < 3.8.2 has CVE-2026-21883 (WebSocket origin validation
    # bypass for deployed Bokeh server instances).
    "bokeh>=3.8.2",
    "holoviews>=1.19",
    "panel>=1.4",
    "colorcet>=3.1",
    "shiny>=1.0",
]
video = [
    "moviepy>=2.0",
    "pygame>=2.5",
]
dev = [
    # pytest < 9.0.3 has CVE-2025-71176 (vulnerable /tmp/pytest-of-{user}
    # directory handling on shared UNIX hosts).
    "pytest>=9.0.3",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.3",
    "pre-commit>=3.6",
]
# Notebook execution: needed to run ``tools/execute_doc_notebooks.py``
# and to view the bundled walkthroughs in the notebooks/ folder.
docs = [
    "jupyter>=1.0",
    "nbconvert>=7.0",
    "ipykernel>=6.0",
]
all = [
    "ballpushing_utils[interactive,video,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/NeLy-EPFL/ballpushing_utils"
Repository = "https://github.com/NeLy-EPFL/ballpushing_utils"
Issues = "https://github.com/NeLy-EPFL/ballpushing_utils/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ballpushing_utils*", "ball_pushing_high_res*"]

[tool.setuptools.package-data]
ballpushing_utils = [
    "py.typed",
    "*.md",
    # Bundle small data assets so the figure scripts and the
    # FlyMetadata brain-region lookup work out-of-the-box, without
    # requiring users to download anything from the lab share or
    # Dataverse. Keep this list narrow — large assets belong on
    # Dataverse, not in the wheel.
    "assets/*.csv",
    "assets/*.png",
    # UMAP analysis subpackage ships its genotype-renames CSV next to
    # the helpers that consume it (``ballpushing_utils.umap.analysis``).
    "umap/data/*.csv",
]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["docs", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP"]
ignore = ["E501", "E722", "B008"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "integration: integration tests (may require data on disk)",
    "slow: tests that take more than a few seconds",
    "unit: fast offline tests",
]

[tool.coverage.run]
source = ["src/ballpushing_utils"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.uv.sources]
utils-behavior = { git = "https://github.com/NeLy-EPFL/utils_behavior.git" }
